# realsense-rust

./: .gitlab-ci.yml  Cargo.toml  README.md
examples/: processing_align.rs  processing_decimation.rs  rerun.rs
realsense-sys/: Cargo.toml
src/: config.rs  context.rs  kind.rs  lib.rs  logging.rs  processing_blocks.rs  stream_profile.rs
src/frame/: composite.rs  image.rs  prelude.rs
src/kind/: option.rs
src/pipeline/: active.rs  inactive.rs
src/processing_blocks/: align.rs  decimation.rs  errors.rs  hole_filling.rs  processing_block.rs  spatial.rs  threshold.rs
