[package]
name = "realsense-sys"
description = "Use RealSense SDK C library as crate"
version = "0.3.1"
authors = ["jerry73204 <jerry73204@gmail.com>", "Jeremy Steward <jeremy.steward@tangramvision.com>", "Brandon Minor <brandon@tangramvision.com"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/realsense-sys/"
keywords = ["Intel", "RealSense", "sensor", "robotics"]
categories = ["external-ffi-bindings", "computer-vision", "hardware-support"]
readme = "README.md"
homepage = "https://gitlab.com/tangram-vision-oss/realsense-rust"
repository =  "https://gitlab.com/tangram-vision-oss/realsense-rust"

[dependencies]


[build-dependencies]
bindgen = { version = "0.54", optional = true }
anyhow = "1.0"
cc = { version = "1.0", features = ["parallel"] }
lazy_static = "1.4"

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
pkg-config = { version = "0.3"  }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = "0.2" }

[features]
default = []
buildtime-bindgen = ["bindgen"]
doc-only = []

[package.metadata.docs.rs]
features = ["doc-only"]
